# wbi_ai

./: .gitignore  ARCHITECTURE_DIAGRAM.md  AZURE_DEPLOYMENT_CHECKLIST.md  COMPLETE_REPORT_FIX.md  F35_Manpower_Report.md  F35_Manpower_Report_FINAL.md  F35_Manpower_Report_Final.md  F35_Manpower_Report_Sequential.md  FINISH_AGENT_FIX.md  IMPLEMENTATION_COMPLETE.md  JSON_FIX_SUMMARY.md  Procfile  QUICK_REFERENCE.md  QUICK_START_ONBOARDING.md  README.md  SCRATCHPAD_SYSTEM.md  SQLITE_SCRATCHPAD_SUMMARY.md  USER_ONBOARDING_GUIDE.md  VERBOSE_OUTPUT_FIX.md  adaptive_lead_enrichment.py  app copy 2.py  app copy 3.py  app copy.py  app_mcp copy 2.py  app_mcp copy.py  app_mcp copy_really_good.py  app_mcp.py  app_mcp_04oct2025-1.py  app_mcp_04oct2025-2.py  app_mcp_04oct2025-3.py  app_mcp_04oct2025-4.py  app_mcp_04oct2025-5.py  app_mcp_3oct2025.py  azure_startup.sh  build.sh  lead_enrichment.py  move_docs.py  pyproject.toml  requirements.txt  startup.sh  (+2 more)
.github/workflows/: main_wbi-deepseekr1-v3.yml
.streamlit/: config.toml
mcp_team_server/: __init__.py  config.py  main_http.py  main_stdio.py  orchestrator.py  server.py
mcp_team_server/agents/: actor.py  aggregator.py  base.py  citationeer.py  critic.py  deduplicator.py  format_director.py  normalizer.py  pii_scrubber.py  planner.py  ranker.py  researcher.py  retriever.py  router.py  security_validator.py  supervisor.py  tableizer.py
mcp_team_server/model_providers/: aiproject_provider.py  base.py  deepseek_provider.py  gpt41_provider.py
scripts/: onboard_user.sh  smoke_orchestrator.py  smoke_rerun_selected.py  smoke_tools.py
(+15 files in other folders)
